data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1577.wast
;; 8. **Test Name: Br_if Targeting Non-loop Structure**    **Description:** Create a sequence where `br_if` incorrectly targets a non-loop control structure, such as an invalid `if` or `block`.    **Infinite Loop Relation:** Mis-targeted branching prevents correct loop exits, potentially causing an infinite loop scenario.

(assert_invalid
  (module
    (func $invalid-br_if-targeting-block
      (block (br_if 1 (i32.const 0))) 
    )
  )
  "unknown label"
)